align results text and icon. fix #60

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -23,15 +23,8 @@ body {
   font-size: large;
 }
 
-.results-icon {
+.results-text {
   position: fixed;
   top: 70px;
   left: 125px;
-}
-
-
-.results-text {
-  position: fixed;
-  top: 75px;
-  left: 152px;
 }
